--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -1,4 +1,7 @@
 {% extends 'main.html' %} {% block content %}
+
+{% if page == "login" %}
+
 <div>
   <form action="" method="POST">
     {% csrf_token %}
@@ -10,5 +13,20 @@
 
     <input type="submit" value="Login" />
   </form>
+  <p>Haven't singned up yet?</p>
+  <a href="{% url 'register' %}">Sign up</a>
 </div>
+
+{% else %}
+
+<div>
+  <form action="" method="POST">
+    {% csrf_token %}
+    {{form.as_p}}   
+    <input type="submit" value="Register" />
+  </form>
+  <p>Already have an account?</p>
+  <a href="{% url 'login' %}">Login</a>
+</div>
+{% endif %}
 {% endblock content %}
